# r3pcomms

./: Cargo.toml  README.md  poc.py  pyproject.toml
.devcontainer/: devcontainer.json
data/: README.md  river3plus.rd.hex.txt
doc/: configuration.yaml  usage.cast
old/: .gitignore  README.md
old/doc/: for_asciinema.sh
old/hid_fixes/: r3p_rd_patch.c
old/scripts/: fetch-rd.sh  homeassistant-mqtt-publisher.sh  ups-poweroff.sh
old/wip/: parse_raw_hid_descriptor.py  parse_raw_rd_result.txt
patchrd/: r3p_rd_patch.c
scripts/: parse_raw_hid_descriptor.py
src/r3pcomms/: __init__.py  __main__.py  _r3pcomms.py
wip/: uhid-create.py
